--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -152,10 +152,10 @@
 <!ENTITY Ctr_pmhidelabels	"Tlačítko nabídky: skrýt texty u ikon">
 <!ENTITY Ctr_menupopupscr	"Nabídky: zobrazit rolovací lištu místo šipek">
 
+<!ENTITY Ctr_tabsep_def		"Default tab separators">
 <!ENTITY Ctr_fxmockup		"&brandShortName; Mockup">
 <!ENTITY Ctr_tabmokcolor	"Bílá barva pro tlačítka panelu (zavřít, nový, skupiny, seznam všech)">
 <!ENTITY Ctr_tabmokcolor2	"Bílá barva a tmavý stín pro text na neaktivních panelech">
-<!ENTITY Ctr_tabmokcolor3	"Bílá barva pro oddělovače panelů">
 <!ENTITY Ctr_tabmokcolor4	"Bílá barva pro prázdné tečkované ikony panelů">
 
 <!ENTITY Ctr_navthrobber1	"Kliknutím na indikátor činnosti se otevře daná url:">
@@ -255,7 +255,7 @@
 <!ENTITY Ctr_addonbarfs		"V celoobrazovkovém módu (fullscreen)">
 
 <!ENTITY Ctr_animation		"Animace">
-<!ENTITY Ctr_throbberalt	"Alternativní animace načítání panelu">
+<!ENTITY Ctr_tabthrobber	"Default loading image">
 <!ENTITY Ctr_bmanimation	"Animace přidání záložky">
 <!ENTITY Ctr_pananimation	"Animace otevření panelu">
 <!ENTITY Ctr_tabanimation	"Animace zavření/otevření panelu (předvolba about:config)">
