--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -152,10 +152,10 @@
 <!ENTITY Ctr_pmhidelabels	"Μενού πίνακα: απόκρυψη ετικετών κουμπιών">
 <!ENTITY Ctr_menupopupscr	"Αναδυόμενα μενού: εμφάνιση γραμμών κύλισης αντί για βέλη κύλισης">
 
+<!ENTITY Ctr_tabsep_def		"Default tab separators">
 <!ENTITY Ctr_fxmockup		"Μακέτα &brandShortName;">
 <!ENTITY Ctr_tabmokcolor	"Άσπρο χρώμα κουμπιών καρτελών (κλείσιμο, νέα, ομάδες, λίστα όλων)">
 <!ENTITY Ctr_tabmokcolor2	"Άσπρο χρώμα και σκοτεινή σκιά κειμένου μη ενεργών καρτελών">
-<!ENTITY Ctr_tabmokcolor3	"Άσπρο χρώμα διαχωριστικών καρτελών">
 <!ENTITY Ctr_tabmokcolor4	"Άσπρο χρώμα για κενό διάστικτο εικονίδιο καρτέλας">
 
 <!ENTITY Ctr_navthrobber1	"Άνοιγμα σε νέα καρτέλα με κλικ στον ενδείκτη δραστηριότητας, της ακόλουθης διεύθυνσης url:">
@@ -255,7 +255,7 @@
 <!ENTITY Ctr_addonbarfs		"Σε προβολή πλήρους οθόνης">
 
 <!ENTITY Ctr_animation		"Κινησιομοίωση">
-<!ENTITY Ctr_throbberalt	"Εναλλακτική εμφάνιση φόρτωσης">
+<!ENTITY Ctr_tabthrobber	"Default loading image">
 <!ENTITY Ctr_bmanimation	"Κινησιομοίωση προσθήκης σελιδοδείκτη">
 <!ENTITY Ctr_pananimation	"Κινησιομοίωση ανοίγματος μενού πίνακα">
 <!ENTITY Ctr_tabanimation	"Κινησιομοίωση κλεισίματος/ανοίγματος καρτέλας (προτίμηση about:config)">
