--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -152,10 +152,10 @@
 <!ENTITY Ctr_pmhidelabels	"Menú de panel emergente: Ocultar etiquetas de los botones">
 <!ENTITY Ctr_menupopupscr	"Menús emergentes: Mostrar barras de desplazamiento en lugar de flechas">
 
+<!ENTITY Ctr_tabsep_def		"Default tab separators">
 <!ENTITY Ctr_fxmockup		"Prototipo (mockup) de &brandShortName;">
 <!ENTITY Ctr_tabmokcolor	"Color blanco para botones de pestaña (cerrar, nueva, grupos, listar todas)">
 <!ENTITY Ctr_tabmokcolor2	"Color blanco y sombreado oscuro para el texto en pestañas no activas">
-<!ENTITY Ctr_tabmokcolor3	"Color blanco para separadores de pestañas">
 <!ENTITY Ctr_tabmokcolor4	"Color blanco para favicon de pestaña vacío y punteado">
 
 <!ENTITY Ctr_navthrobber1	"Hacer clic en el indicador de actividad abre la URL especificada:">
@@ -255,7 +255,7 @@
 <!ENTITY Ctr_addonbarfs		"En modo pantalla completa">
 
 <!ENTITY Ctr_animation		"Animación">
-<!ENTITY Ctr_throbberalt	"Animación alternativa del icono de carga (throbber) de la pestaña">
+<!ENTITY Ctr_tabthrobber	"Default loading image">
 <!ENTITY Ctr_bmanimation	"Animación al añadir nuevos marcadores">
 <!ENTITY Ctr_pananimation	"Animación en la apertura de panel">
 <!ENTITY Ctr_tabanimation	"Animación en la apertura/cierre de pestañas (about:config >> browser.tabs.animate)">
