--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -152,10 +152,10 @@
 <!ENTITY Ctr_pmhidelabels	"Panneau menu : icônes seules">
 <!ENTITY Ctr_menupopupscr	"Menus pop-up : afficher des ascenseurs au lieu des flèches de défilement">
 
+<!ENTITY Ctr_tabsep_def		"Default tab separators">
 <!ENTITY Ctr_fxmockup		"&brandShortName; Mockup">
 <!ENTITY Ctr_tabmokcolor	"Boutons des onglets de couleur blanche (fermer, nouveau, groupes, tout lister)">
 <!ENTITY Ctr_tabmokcolor2	"Texte des onglets de couleur blanche + ombre noire pour les onglets non actifs">
-<!ENTITY Ctr_tabmokcolor3	"Séparateurs de couleur blanche sur la barre d'onglets">
 <!ENTITY Ctr_tabmokcolor4	"Favicons vides : Pointillés de couleur blanche  ">
 
 <!ENTITY Ctr_navthrobber1	"Un clic sur l'indicateur d'activité ouvre une adresse prédéfinie :">
@@ -255,7 +255,7 @@
 <!ENTITY Ctr_addonbarfs		"En mode plein écran">
 
 <!ENTITY Ctr_animation		"Animation">
-<!ENTITY Ctr_throbberalt	"Icône animée alternative pour le chargement des onglets">
+<!ENTITY Ctr_tabthrobber	"Default loading image">
 <!ENTITY Ctr_bmanimation	"Animation lors de l'ajout de nouveaux marque-pages">
 <!ENTITY Ctr_pananimation	"Animation d'ouverture des panneaux">
 <!ENTITY Ctr_tabanimation	"Animation de l'ouverture et la fermeture des onglets (about:config)">
