--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -152,10 +152,10 @@
 <!ENTITY Ctr_pmhidelabels	"Mostra solo le icone nel pannello menu">
 <!ENTITY Ctr_menupopupscr	"Utilizza barra di scorrimento al posto delle frecce nei menu di popup">
 
+<!ENTITY Ctr_tabsep_def		"Default tab separators">
 <!ENTITY Ctr_fxmockup		"Mockup">
 <!ENTITY Ctr_tabmokcolor	"Utilizza il colore bianco per i pulsanti delle schede (Chiudi, Nuova, Gruppi, Mostra tutte)">
 <!ENTITY Ctr_tabmokcolor2	"Utilizza testo bianco con ombreggiatura scura nelle schede non attive">
-<!ENTITY Ctr_tabmokcolor3	"Utilizza separatori bianchi nella barra delle schede">
 <!ENTITY Ctr_tabmokcolor4	"Colore bianco per la favicon punteggiata vuota">
 
 <!ENTITY Ctr_navthrobber1	"Cliccando l'indicatore di attività si apre l'url specificato:">
@@ -255,7 +255,7 @@
 <!ENTITY Ctr_addonbarfs		"In modalità tutto schermo">
 
 <!ENTITY Ctr_animation		"Icone animate">
-<!ENTITY Ctr_throbberalt	"Throbber di caricamento scheda alternativo">
+<!ENTITY Ctr_tabthrobber	"Default loading image">
 <!ENTITY Ctr_bmanimation	"Icona animata durante l’aggiunta ai segnalibri">
 <!ENTITY Ctr_pananimation	"Icona animata durante l’apertura di un pannello">
 <!ENTITY Ctr_tabanimation	"Icona animata per l’apertura o chiusura di una scheda (about:config)">
