--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -152,10 +152,10 @@
 <!ENTITY Ctr_pmhidelabels	"Menu do Painel: Ocultar Rótulos do Botão">
 <!ENTITY Ctr_menupopupscr	"Pop-ups do Menu: Exibir Barras de Rolagem em vez das Setas de Rolagem">
 
+<!ENTITY Ctr_tabsep_def		"Default tab separators">
 <!ENTITY Ctr_fxmockup		"Modelo do &brandShortName;">
 <!ENTITY Ctr_tabmokcolor	"Botões da Aba na Cor Branca (Fechar, Nova, Grupos, Listar Tudo)">
 <!ENTITY Ctr_tabmokcolor2	"Texto na Cor Branca e Sombra Escura nas Abas Inativas">
-<!ENTITY Ctr_tabmokcolor3	"Separadores para as Abas na Cor Branca">
 <!ENTITY Ctr_tabmokcolor4	"Cor Branca para o Favicon Vazio da Aba Pontilhada">
 
 <!ENTITY Ctr_navthrobber1	"Clicar no Indicador de Atividade Abre a URL Especificada:">
@@ -255,7 +255,7 @@
 <!ENTITY Ctr_addonbarfs		"No Modo de Tela Cheia">
 
 <!ENTITY Ctr_animation		"Animações">
-<!ENTITY Ctr_throbberalt	"Aba Alternativa 'throbber' ao Carregar a Animação">
+<!ENTITY Ctr_tabthrobber	"Default loading image">
 <!ENTITY Ctr_bmanimation	"Usar Animação ao Usar os Favoritos">
 <!ENTITY Ctr_pananimation	"Usar Animação ao Abrir o Painel">
 <!ENTITY Ctr_tabanimation	"Usar Animação ao Fechar/Abrir a Aba (about:config)">
