--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -152,10 +152,10 @@
 <!ENTITY Ctr_pmhidelabels	"Panel menu uyarısı: buton etikeitini gizle">
 <!ENTITY Ctr_menupopupscr	"Menu uyarısı: kaydırma okları yerine kaydırma çubuklarını göster">
 
+<!ENTITY Ctr_tabsep_def		"Default tab separators">
 <!ENTITY Ctr_fxmockup		"&brandShortName; Taklit Modeli">
 <!ENTITY Ctr_tabmokcolor	"Sekme butonları için beyaz renk (kapat, yeni, gruplar, tümünü listele)">
 <!ENTITY Ctr_tabmokcolor2	"Yazılar ve aktif olmayan sekmeler için beyaz renk ve karanlık gölge">
-<!ENTITY Ctr_tabmokcolor3	"Sekme ayırıcıları için Beyaz renk kullan">
 <!ENTITY Ctr_tabmokcolor4	"Boş-noktalı sekme faviconu için Beyaz renk kullan">
 
 <!ENTITY Ctr_navthrobber1	"Etkinlik göstergesine tıklamak beliritilen bağlantıyı açar:">
@@ -255,7 +255,7 @@
 <!ENTITY Ctr_addonbarfs		"Tam Ekran modunda">
 
 <!ENTITY Ctr_animation		"Animasyon">
-<!ENTITY Ctr_throbberalt	"Alternatif throbber sekme yüklenme animasyonu">
+<!ENTITY Ctr_tabthrobber	"Default loading image">
 <!ENTITY Ctr_bmanimation	"Yerimi animasyonu">
 <!ENTITY Ctr_pananimation	"Panel açılış animasyonu">
 <!ENTITY Ctr_tabanimation	"Sekme kapama/açma animasyonu (about:config tercihi)">
