--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -152,10 +152,10 @@
 <!ENTITY Ctr_pmhidelabels	"Спливаюче вікно панелі меню: приховати написи на кнопках">
 <!ENTITY Ctr_menupopupscr	"Спливаючі вікна меню: показувати полоси прокручування замість стрілки прокручування">
 
+<!ENTITY Ctr_tabsep_def		"Default tab separators">
 <!ENTITY Ctr_fxmockup		"&brandShortName; макет">
 <!ENTITY Ctr_tabmokcolor	"Білий колір для кнопок вкладок (закрити, нова, групи, список усіх)">
 <!ENTITY Ctr_tabmokcolor2	"Білий колір і темна тінь для тексту на неактивній вкладці">
-<!ENTITY Ctr_tabmokcolor3	"Білий колір для розділювачів вкладок">
 <!ENTITY Ctr_tabmokcolor4	"Білий колір для порожньої пунктирної іконки сайту на вкладці">
 
 <!ENTITY Ctr_navthrobber1	"Клік на індикаторі активності відкриває визначену адресу:">
@@ -255,7 +255,7 @@
 <!ENTITY Ctr_addonbarfs		"У повноекранному режимі">
 
 <!ENTITY Ctr_animation		"Анімація">
-<!ENTITY Ctr_throbberalt	"Альтернативна анімація">
+<!ENTITY Ctr_tabthrobber	"Default loading image">
 <!ENTITY Ctr_bmanimation	"Анімація створення закладок">
 <!ENTITY Ctr_pananimation	"Анімація відкривання панелі">
 <!ENTITY Ctr_tabanimation	"Анімація відкривання/закривання вкладок (about:config preference)">
