--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -152,10 +152,10 @@
 <!ENTITY Ctr_pmhidelabels	"面板菜单: 隐藏按钮标签文本">
 <!ENTITY Ctr_menupopupscr	"弹出式菜单: 用滚动栏代替滚动箭头">
 
+<!ENTITY Ctr_tabsep_def		"Default tab separators">
 <!ENTITY Ctr_fxmockup		"&brandShortName; 样式">
 <!ENTITY Ctr_tabmokcolor	"白色标签页按钮 (关闭, 新建, 分组, 显示所有)">
 <!ENTITY Ctr_tabmokcolor2	"在非激活标签页上使用白色文字并添加文字阴影">
-<!ENTITY Ctr_tabmokcolor3	"白色标签页分隔符">
 <!ENTITY Ctr_tabmokcolor4	"白色的空白虚线标签页网站图标">
 
 <!ENTITY Ctr_navthrobber1	"点击活动指示器打开指定网址:">
@@ -255,7 +255,7 @@
 <!ENTITY Ctr_addonbarfs		"在全屏模式">
 
 <!ENTITY Ctr_animation		"动画">
-<!ENTITY Ctr_throbberalt	"使用备选的加载动画效果">
+<!ENTITY Ctr_tabthrobber	"Default loading image">
 <!ENTITY Ctr_bmanimation	"加入书签动画">
 <!ENTITY Ctr_pananimation	"打开面板动画">
 <!ENTITY Ctr_tabanimation	"打开/关闭标签页动画 (about:config 选项)">
