--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -152,10 +152,10 @@
 <!ENTITY Ctr_pmhidelabels	"面板選單: 隱藏按鈕文字標籤">
 <!ENTITY Ctr_menupopupscr	"彈出式選單: 用捲軸取代捲動箭頭">
 
+<!ENTITY Ctr_tabsep_def		"Default tab separators">
 <!ENTITY Ctr_fxmockup		"&brandShortName; 樣式">
 <!ENTITY Ctr_tabmokcolor	"白色分頁按鈕 (關閉、新增、分頁群組、列出所有分頁)">
 <!ENTITY Ctr_tabmokcolor2	"非目前的分頁，其字型使用白色文字，並加上文字陰影">
-<!ENTITY Ctr_tabmokcolor3	"白色分頁分隔線">
 <!ENTITY Ctr_tabmokcolor4	"為虛線空心分頁圖示著上白色">
 
 <!ENTITY Ctr_navthrobber1	"按下進度指示器，則開啟指定網址:">
@@ -255,7 +255,7 @@
 <!ENTITY Ctr_addonbarfs		"In fullscreen mode">
 
 <!ENTITY Ctr_animation		"動畫">
-<!ENTITY Ctr_throbberalt	"換個分頁載入圖示動畫 (進度指示器)">
+<!ENTITY Ctr_tabthrobber	"Default loading image">
 <!ENTITY Ctr_bmanimation	"書籤加入的動畫">
 <!ENTITY Ctr_pananimation	"面板開啟的動畫">
 <!ENTITY Ctr_tabanimation	"分頁關閉/開啟的動畫 (about:config)">
