--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -95,7 +95,7 @@
 <!ENTITY Ctr_appbuttonI1e	"Niewidoczny na systemowym pasku tytułu, tylko na pasku tytułu Firefoksa!">
 <!ENTITY Ctr_appbuttonI2	"Kolory przycisku są tylko widoczne na pasku tytułu oraz pasku kart!">
 <!ENTITY Ctr_appbutmhi		"Wyższa pozycja (jeżeli na pasku kart)">
-<!ENTITY Ctr_appbautocol	"Set default / Aurora / Nightly color automatically">
+<!ENTITY Ctr_appbautocol	"Ustaw automatycznie kolor domyślny / Aurora / Nightly">
 <!ENTITY Ctr_appbutbdl		"Ukryj kolory obramowań i tła">
 <!ENTITY Ctr_dblclclosefx	"Podwójne kliknięcie zamyka bieżące okno">
 <!ENTITY Ctr_appbclmmenus	"Klikalne menu wewnątrz menu przycisku (Nowa karta, Drukuj...)">
@@ -152,10 +152,10 @@
 <!ENTITY Ctr_pmhidelabels	"Wyskakujące okno menu panelu: ukryj etykiety przycisku">
 <!ENTITY Ctr_menupopupscr	"Menu kontekstowe: pokaż pasek przewijania zamiast strzałek przewijania">
 
+<!ENTITY Ctr_tabsep_def		"Default tab separators">
 <!ENTITY Ctr_fxmockup		"Makieta Firefoksa">
 <!ENTITY Ctr_tabmokcolor	"Biały kolor przycisków karty (zamknij, nowa, grupy, lista wszystkich)">
 <!ENTITY Ctr_tabmokcolor2	"Biały kolor i ciemny cień tekstu na nieaktywnych kartach">
-<!ENTITY Ctr_tabmokcolor3	"Biały kolor separatorów kart">
 <!ENTITY Ctr_tabmokcolor4	"Biały kolor pustej i wykropkowanej ikony ulubionych na karcie">
 
 <!ENTITY Ctr_navthrobber1	"Kliknięcie wskaźnika aktywności otwiera określony adres:">
@@ -236,7 +236,7 @@
 <!ENTITY Ctr_menubarnofog	"Usuń kolor tła i mgłę (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Niebieskie kolory Aero głównych pasków narzędzi i kart">
-<!ENTITY Ctr_transpttbw10	"Title/menu/tabs toolbar: remove background color (Windows 10)">
+<!ENTITY Ctr_transpttbw10	"Pasek tytułu/menu/kart: usuń kolor tła (Windows 10)">
 <!ENTITY Ctr_hidenavbar		"Pasek nawigacji: ukryj pasek narzędzi">
 <!ENTITY Ctr_nobookbarbg	"Pasek zakładek: usuń kolor tła">
 <!ENTITY Ctr_bookbarfs		"Pasek zakładek: w trybie pełnoekranowym">
@@ -255,7 +255,7 @@
 <!ENTITY Ctr_addonbarfs		"W trybie pełnoekranowym">
 
 <!ENTITY Ctr_animation		"Animacje">
-<!ENTITY Ctr_throbberalt	"Alternatywna animacja ładowania wskaźnika aktywności karty">
+<!ENTITY Ctr_tabthrobber	"Default loading image">
 <!ENTITY Ctr_bmanimation	"Animacja dodawania zakładki">
 <!ENTITY Ctr_pananimation	"Animacja otwierania panelu">
 <!ENTITY Ctr_tabanimation	"Animacja otwierania i zamykania karty (ustawienie about:config)">
@@ -288,8 +288,8 @@
 <!ENTITY Ctr_e_prefsui		"Ustawienia w karcie">
 <!ENTITY Ctr_e_readermode	"Tryb czytnika">
 <!ENTITY Ctr_e_pocket		"Pocket">
-<!ENTITY Ctr_e_tabsaudioico	"Audio playing icon on tabs">
-<!ENTITY Ctr_fx42tabsaudico	"&brandShortName; 42+: Unchecking this preference removes 'audio playing icon' from tabs.">
+<!ENTITY Ctr_e_tabsaudioico	"Ikona odtwarzania dźwięku na kartach">
+<!ENTITY Ctr_fx42tabsaudico	"&brandShortName; 42+: odznaczenie tego ustawienia usuwa z kart 'ikonę odtwarzania dźwięku'.">
 
 
 <!ENTITY Ctr_pw_settings	"Ustawienia">
