--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -95,7 +95,7 @@
 <!ENTITY Ctr_appbuttonI1e	"Není viditelné v záhlaví okna Windows OS, pouze v záhlaví okna &brandShortName;u!">
 <!ENTITY Ctr_appbuttonI2	"Barvy tlačítka jsou viditelné pouze v záhlaví okna nebo liště s panely!">
 <!ENTITY Ctr_appbutmhi		"Vyšší umístění (pokud na liště s panely)">
-<!ENTITY Ctr_appbautocol	"Set default / Aurora / Nightly color automatically">
+<!ENTITY Ctr_appbautocol	"Nastavit výchozí barvy / Aurora / Nightly automaticky">
 <!ENTITY Ctr_appbutbdl		"Skrýt okraje a barvy pozadí">
 <!ENTITY Ctr_dblclclosefx	"Dvojklik zavře současné okno">
 <!ENTITY Ctr_appbclmmenus	"Volitelný název tlačítka aplikace (Nový panel, Tisk...)">
